create procfile, runtime.txt for deployment

--- a/galleryproject/requirements.txt
+++ b/galleryproject/requirements.txt
@@ -1,22 +1,55 @@
+alabaster==0.7.12
+asgiref==3.5.2
+Babel==2.10.1
+backports.zoneinfo==0.2.1
+bcrypt==3.2.2
 blinker==1.4
+bootstrap-py==1.0.2
 Brlapi==0.7.0
 ccsm==0.9.14.1
 certifi==2019.11.28
+cffi==1.15.0
 chardet==3.0.4
 chrome-gnome-shell==0.0.0
-Click==7.0
+click==8.1.2
 colorama==0.4.3
 compizconfig-python==0.9.14.1
 cryptography==2.8
 cupshelpers==1.0
 dbus-python==1.2.16
 defer==1.0.6
+defusedxml==0.7.1
+distlib==0.3.4
 distro==1.4.0
 distro-info===0.23ubuntu1
+dj-database-url==0.5.0
+Django==4.0.4
+django-heroku==0.3.1
+dnspython==2.2.1
+docutils==0.17.1
+dominate==2.6.0
+email-validator==1.2.1
 entrypoints==0.3
+filelock==3.6.0
+Flask==2.1.1
+Flask-Bcrypt==1.0.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.1
+Flask-Mail==0.9.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+gitdb==4.0.9
+GitPython==3.1.27
+greenlet==1.1.2
+gunicorn==20.1.0
 hijra==1.0
 httplib2==0.14.0
 idna==2.8
+imagesize==1.3.0
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
 keyring==18.0.1
 language-selector==0.1
 launchpadlib==1.10.13
@@ -25,32 +58,61 @@ lazr.uri==1.0.3
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
-MarkupSafe==1.1.0
+MarkupSafe==2.1.1
 oauthlib==3.1.0
 onboard==1.4.1
+packaging==21.3
+pbr==5.8.1
+pguard==0.4.0
 Pillow==9.1.1
+platformdirs==2.5.2
 protobuf==3.6.1
+psycopg2==2.9.3
 pycairo==1.16.2
+pycparser==2.21
 pycups==1.9.73
+Pygments==2.12.0
 PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 PyNaCl==1.3.0
+pyparsing==3.0.8
+pyperclip==1.8.2
 pyRFC3339==1.1
 python-apt==2.0.0+ubuntu0.20.4.7
 python-dateutil==2.7.3
+python-dotenv==0.20.0
 pytz==2019.3
 pyxdg==0.26
+random-password-generator==2.2.0
 requests==2.22.0
 requests-unixsocket==0.2.0
 SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.14.0
+smmap==5.0.0
+snowballstemmer==2.2.0
+Sphinx==4.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.36
+sqlparse==0.4.2
 system-service==0.3
 systemd-python==234
+testresources==2.0.1
 ubuntu-drivers-common==0.0.0
 unattended-upgrades==0.1
 unity-tweak-tool==0.0.7
 urllib3==1.25.8
+virtualenv==20.14.1
+visitor==0.1.3
 wadllib==1.3.3
+Werkzeug==2.1.1
+whitenoise==3.3.1
+WTForms==3.0.1
 xkit==0.0.0
+zipp==3.8.0
